--- a/index.html
+++ b/index.html
@@ -45,9 +45,28 @@
             <li><a href="#">Colors</a></li>
             <li><a href="#">Fonts</a></li>
             <li><a href="#">Icons</a></li>
+            <li><a href="#">Examples</a></li>
+          </ul>
+        </li>
+      </ul>
+       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Content Manager <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Button Hierarchy</a></li>
+              <ul>
+                <li><a>History</a></li>
+                <li><a>About</a></li>
+              </ul>
+            <li><a href="#">Colors</a></li>
+            <ul>
+                <li><a>Dos and Dont's</a></li>
+                <li><a>Spacing</a></li>
+              </ul>
+            <li><a href="#">Fonts</a></li>
+            <li><a href="#">Icons</a></li>
             <li><a href="#">Navigation</a></li>
           </ul>
         </li>
+        <li><a href="#">Infographics</a></li>
       </ul>
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
