--- a/Site/index.html
+++ b/Site/index.html
@@ -7,61 +7,83 @@
   <title>Bootstrap 101 Template</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+
   <!-- Optional theme -->
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brnd</a>
-    </div>
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#"><img src="img/PT_LOGO.png"/></a>
+      </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Marketing Site <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Brand Overview</a></li>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          
+          <li class="active"><a href="#">Home</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Marketing Site <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Brand Overview</a></li>
               <ul>
                 <li><a>History</a></li>
                 <li><a>About</a></li>
               </ul>
-            <li><a href="#">Logos</a></li>
-            <ul>
+              <li><a href="#">Logos</a></li>
+              <ul>
                 <li><a>Dos and Dont's</a></li>
                 <li><a>Spacing</a></li>
               </ul>
-            <li><a href="#">Colors</a></li>
-            <li><a href="#">Fonts</a></li>
-            <li><a href="#">Icons</a></li>
-            <li><a href="#">Navigation</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-  <h1>Hello, world!</h1>
+              <li><a href="#">Colors</a></li>
+              <li><a href="#">Fonts</a></li>
+              <li><a href="#">Icons</a></li>
+              <li><a href="#">Examples</a></li>
+            </ul>
+          </li>
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+        <li class="dropdown">
+         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Content Manager <b class="caret"></b></a>
+         <ul class="dropdown-menu">
+          <li><a href="#">Button Hierarchy</a></li>
+          <ul>
+            <li><a>History</a></li>
+            <li><a>About</a></li>
+          </ul>
+          <li><a href="#">Colors</a></li>
+          <ul>
+            <li><a>Dos and Dont's</a></li>
+            <li><a>Spacing</a></li>
+          </ul>
+          <li><a href="#">Fonts</a></li>
+          <li><a href="#">Icons</a></li>
+          <li><a href="#">Navigation</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Infographics</a></li>
+    </ul>
+    <!-- <form class="navbar-form navbar-right" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form> -->
+  </div><!-- /.navbar-collapse -->
+</div><!-- /.container-fluid -->
+</nav>
+<h1>Hello, world!</h1>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
 </html>
